Feat(eos_designs): Added for L3LS P2P addressing via Spine using "downlink_pools" data model (#3693)

--- a/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_negative_unit_tests/inventory/hosts.yml
@@ -51,6 +51,14 @@ all:
         fabric_p2p_vrfs:
           hosts:
             invalid-uplink-type-p2p-vrfs-underlay-router-false:
+        fabric_downlink_pools_missing:
+          hosts:
+            downlink-pools-missing-spine:
+            downlink-pools-missing-l3leaf:
+        fabric_downlink_pools_duplicate:
+          hosts:
+            downlink-pools-duplicate-spine:
+            downlink-pools-duplicate-l3leaf:
     EOS_DESIGNS_FAILURES: # Add cases that fail during 'eos_designs_structured_config' phase
       hosts:
         failure-port-channel:
