--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/tunnel_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/tunnel_interfaces.schema.yml
@@ -76,6 +76,13 @@ keys:
               valid_values: ["ingress", "egress"]
               description: |
                 Optional direction ('ingress', 'egress')  for tcp mss ceiling
+        tunnel_mode:
+          type: str
+          valid_values: ["gre", "ipsec"]
+          description: |
+            Tunnel encapsulation method.
+            gre: Generic route encapsulation protocol,
+            ipsec: IPsec-over-IP encapsulation.
         source_interface:
           type: str
           description: Tunnel Source Interface Name
@@ -85,6 +92,14 @@ keys:
         path_mtu_discovery:
           type: bool
           description: Enable Path MTU Discovery On Tunnel
+        ipsec_profile:
+          type: str
+          description: |
+            Used only when tunnel_mode is set to ipsec.
+            It must target a defined IPsec profile.
+        nat_profile:
+          type: str
+          description: It must target a defined NAT profile.
         eos_cli:
           type: str
           description: |
