--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/tunnel_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/tunnel_interfaces.schema.yml
@@ -99,7 +99,7 @@ keys:
             It must target a defined IPsec profile.
         nat_profile:
           type: str
-          description: It must target a defined NAT profile.
+          description: NAT interface profile.
         eos_cli:
           type: str
           description: |
