--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/tunnel_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/tunnel_interfaces.schema.yml
@@ -79,10 +79,10 @@ keys:
         tunnel_mode:
           type: str
           valid_values: ["gre", "ipsec"]
-          description: |
+          description: |-
             Tunnel encapsulation method.
-            gre: Generic route encapsulation protocol,
-            ipsec: IPsec-over-IP encapsulation.
+            `gre`: Generic route encapsulation protocol,
+            `ipsec`: IPsec-over-IP encapsulation.
         source_interface:
           type: str
           description: Tunnel Source Interface Name
@@ -94,8 +94,8 @@ keys:
           description: Enable Path MTU Discovery On Tunnel
         ipsec_profile:
           type: str
-          description: |
-            Used only when tunnel_mode is set to ipsec.
+          description: |-
+            Used only when `tunnel_mode` is set to `ipsec`.
             It must target a defined IPsec profile.
         nat_profile:
           type: str
