--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -12335,6 +12335,59 @@ keys:
               valid_values:
               - all
               - iif
+  router_internet_exit:
+    type: dict
+    description: Internet-exit feature to configure internet bound service for virtual
+      topologies.
+    keys:
+      policies:
+        type: list
+        description: Internet-exit policy represent a policy which can be attached
+          to a virtual topology profile.
+        primary_key: name
+        items:
+          type: dict
+          keys:
+            name:
+              type: str
+            exit_groups:
+              type: list
+              description: The exit groups that are configured under a policy are
+                strictly ordered, meaning an exit group appearing first has more priority
+                than the exit group that follows it.
+              items:
+                type: dict
+                keys:
+                  name:
+                    type: str
+      exit_groups:
+        type: list
+        description: 'Exit groups represent a group of exit options (connections).
+
+          Traffic flows are load balanced in a round robin fashion across all the
+          members (exits) of the exit-group.'
+        primary_key: name
+        items:
+          type: dict
+          keys:
+            name:
+              type: str
+            fib_default:
+              type: bool
+              description: Fib default exit indicates that the flows that select this
+                exit will follow the default route available in the VRF of the flow.
+            local_connections:
+              type: list
+              description: 'Local connections refer to connections configured under
+                the `router_service_insertion`.
+
+                The service-insertion module reports the health of the connection
+                and the exit will qualify for use only when it is healthy.'
+              items:
+                type: dict
+                keys:
+                  name:
+                    type: str
   router_isis:
     type: dict
     keys:
