--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_p2p_links.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_p2p_links.schema.yml
@@ -120,6 +120,9 @@ $defs:
         sflow:
           type: bool
           description: Enable sFlow. Overrides `fabric_sflow` setting.
+        underlay_multicast:
+          type: bool
+          default: false
         qos_profile:
           type: str
           description: QOS service profile.
