Fixing CI (eos_cli_config_gen molecule)

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/tunnel-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/tunnel-interfaces.cfg
@@ -42,6 +42,7 @@ interface Tunnel2
    tunnel mode gre
    tunnel source interface Ethernet42
    tunnel destination dead:beef::1
+   tunnel ipsec profile Profile-2
 !
 interface Tunnel3
    description test dual stack
