--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/dot1x.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/dot1x.schema.yml
@@ -44,3 +44,99 @@ keys:
             max: 9236
             convert_types:
               - str
+      aaa:
+        type: dict
+        description: Configure AAA parameters.
+        keys:
+          unresponsive:
+            type: dict
+            description: Configure AAA timeout options.
+            keys:
+              eap_response:
+                type: str
+                description: EAP response to send.
+                valid_values:
+                  - "success"
+                  - "disabled"
+              action:
+                type: dict
+                description: Set action for supplicant when AAA times out.
+                keys:
+                  apply_cached_results:
+                    type: bool
+                    description: Use results from a previous AAA response.
+                  cached_results_timeout:
+                    type: dict
+                    keys:
+                      time_duration:
+                        type: int
+                        convert_types:
+                          - str
+                        min: 1
+                        description: |-
+                          Enable caching for a specific duration -
+                          <1-10000>      duration in days
+                          <1-14400000>   duration in minutes
+                          <1-240000>     duration in hours
+                          <1-864000000>  duration in seconds
+                      time_duration_unit:
+                        type: str
+                        required: true
+                        valid_values:
+                          - "days"
+                          - "hours"
+                          - "minutes"
+                          - "seconds"
+                  apply_alternate:
+                    type: bool
+                    description: |-
+                      Apply alternate action if primary action fails.
+                      eg. aaa unresponsive action apply cached-results else traffic allow
+                  traffic_allow:
+                    type: bool
+                    description: Set action for supplicant traffic when AAA times out.
+                  traffic_allow_vlan:
+                    type: int
+                    convert_types:
+                      - str
+                    min: 1
+                    max: 4094
+              phone_action:
+                type: dict
+                description: Set action for supplicant when AAA times out.
+                keys:
+                  apply_cached_results:
+                    type: bool
+                    description: Use results from a previous AAA response.
+                  cached_results_timeout:
+                    type: dict
+                    keys:
+                      time_duration:
+                        type: int
+                        convert_types:
+                          - str
+                        min: 1
+                        description: |-
+                          Enable caching for a specific duration -
+                          <1-10000>      duration in days
+                          <1-14400000>   duration in minutes
+                          <1-240000>     duration in hours
+                          <1-864000000>  duration in seconds
+                      time_duration_unit:
+                        type: str
+                        required: true
+                        valid_values:
+                          - "days"
+                          - "hours"
+                          - "minutes"
+                          - "seconds"
+                  apply_alternate:
+                    type: bool
+                    description: |-
+                      Apply alternate action if primary action fails.
+                      eg. aaa unresponsive phone action apply cached-results else traffic allow
+                  traffic_allow:
+                    description: Set action for supplicant traffic when AAA times out.
+                    type: bool
+              recovery_action_reauthenticate:
+                type: bool
