Feat(eos_cli_config_gen): Add IPsec and NAT options to tunnel_interfaces. (#3830)
Co-authored-by: Claus Holbech <holbech@arista.com>

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/tunnel-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/tunnel-interfaces.cfg
@@ -21,6 +21,7 @@ interface Tunnel1
    ip access-group test-in in
    ip access-group test-out out
    tcp mss ceiling ipv4 666 ingress
+   tunnel mode ipsec
    tunnel source interface Ethernet42
    tunnel destination 6.6.6.6
    tunnel path-mtu-discovery
@@ -37,8 +38,11 @@ interface Tunnel2
    ipv6 access-group test-in in
    ipv6 access-group test-out out
    tcp mss ceiling ipv6 666 egress
+   ip nat service-profile NAT-PROFILE-NO-VRF-2
+   tunnel mode gre
    tunnel source interface Ethernet42
    tunnel destination dead:beef::1
+   tunnel ipsec profile Profile-2
 !
 interface Tunnel3
    description test dual stack
@@ -47,8 +51,10 @@ interface Tunnel3
    ipv6 enable
    ipv6 address beef::64/64
    tcp mss ceiling ipv4 666 ipv6 666
+   tunnel mode ipsec
    tunnel source interface Ethernet42
    tunnel destination 1.1.1.1
+   tunnel ipsec profile Profile-3
 !
 interface Tunnel4
    description test no tcp_mss
@@ -56,6 +62,7 @@ interface Tunnel4
    ip address 64.64.64.64/24
    ipv6 enable
    ipv6 address beef::64/64
+   ip nat service-profile NAT-PROFILE-NO-VRF-1
    tunnel source interface Ethernet42
    tunnel destination 1.1.1.1
 !
