issue-3809: fix type in avd directory

--- a/ansible_collections/arista/avd/examples/campus-fabric/group_vars/DC1.yml
+++ b/ansible_collections/arista/avd/examples/campus-fabric/group_vars/DC1.yml
@@ -22,7 +22,7 @@ name_servers:
   - 8.8.4.4
   - 8.8.8.8
 
-# NTP Servers IP or DNS name, first NTP server will be prefered, and sourced from Managment VRF
+# NTP Servers IP or DNS name, first NTP server will be preferred, and sourced from Management VRF
 ntp_settings:
   server_vrf: use_mgmt_interface_vrf
   servers:
