--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/arp.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/arp.yml
@@ -7,7 +7,7 @@ arp:
       vrf: BLAH
       mac_address: DEAD.BEEF.CAFE
     - ipv4_address: 42.42.42.42
-      vrf: defaults
+      vrf: defauls
       mac_address: DEAD.BEEF.CAFE
     # default VRF - testing sorting on ipv4 addresses and MAC addresses
     - ipv4_address: 43.42.42.42
