--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -4442,7 +4442,14 @@ keys:
 
                 Can be an IPv4 or an IPv6 address.
 
-                '
+                If both `local_id` and `local_id_fqdn` are set, `local_id_fqdn` takes
+                precedence.'
+            local_id_fqdn:
+              type: str
+              description: 'Local FQDN IKE Identification.
+
+                If both `local_id` and `local_id_fqdn` are set, `local_id_fqdn` takes
+                precedence.'
             ike_lifetime:
               type: int
               convert_types:
