--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -2599,6 +2599,12 @@ keys:
         management_interface:
           type: str
           default: Management1
+        structured_config:
+          type: dict
+          documentation_options:
+            hide_keys: true
+          description: Custom structured config for eos_cli_config_gen.
+          $ref: eos_cli_config_gen#/
         raw_eos_cli:
           type: str
           description: EOS CLI rendered directly on the root level of the final EOS
