--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/policy-maps.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/policy-maps.yml
@@ -7,6 +7,17 @@ policy_maps:
             dscp: af11
             traffic_class: 2
             drop_precedence: 1
+          police:
+            rate: 10
+            rate_unit: kbps
+            rate_burst_size: 260
+            rate_burst_size_unit: kbytes
+            higher_rate: 30
+            higher_rate_unit: kbps
+            higher_rate_burst_size: 270
+            higher_rate_burst_size_unit: kbytes
+            action:
+              type: drop-precedence
         - name: CM_REPLICATION_LD_2
           set:
             dscp: af11
@@ -17,6 +28,26 @@ policy_maps:
           set:
             dscp: af11
             cos: 4
+          police:
+            rate: 30
+            rate_unit: kbps
+            rate_burst_size: 280
+            higher_rate: 1
+            higher_rate_unit: mbps
+            higher_rate_burst_size: 270
+            action:
+              type: dscp
+              dscp_value: af11
+    - name: PM_REPLICATION_LD3
+      classes:
+        - name: CM_REPLICATION_LD
+          set:
+            dscp: af11
+            cos: 6
+          police:
+            rate: 10000
+            rate_burst_size: 260
+            rate_burst_size_unit: kbytes
   pbr:
     - name: PM_PBR_BREAKOUT
       classes:
