--- a/.github/workflows/pull-request-management.yml
+++ b/.github/workflows/pull-request-management.yml
@@ -223,6 +223,7 @@ jobs:
           - 'example-isis-ldp-ipvpn'
           - 'example-l2ls-fabric'
           - 'example-single-dc-l3ls'
+          - 'example-single-dc-multipod-l3ls'
         ansible_version:
           - 'ansible-core<2.17.0 --upgrade'
         # Also test minimum ansible version for one scenario.
