Correcting full path for import_role

--- a/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/playbooks/test_fabric.yml
+++ b/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/playbooks/test_fabric.yml
@@ -5,5 +5,5 @@
     - arista.avd
   tasks:
     - name: deploy configuration to device
-      import_role:
+      ansible.builtin.import_role:
         name: arista.avd.eos_validate_state
