--- a/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/playbooks/deploy_fabric.yml
+++ b/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/playbooks/deploy_fabric.yml
@@ -3,7 +3,7 @@
   hosts: cvp1
   tasks:
     - name: provision CVP with AVD configuration
-      import_role:
+      ansible.builtin.import_role:
         name: arista.avd.eos_config_deploy_cvp
       vars:
         container_root: 'FABRIC'
