--- a/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/playbooks/build_fabric.yml
+++ b/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/playbooks/build_fabric.yml
@@ -1,6 +1,7 @@
 ---
 - name: Build fabric configuration
   hosts: FABRIC
+  gather_facts: false
   tasks:
     - name: Generate AVD Structured Configurations and Fabric Documentation
       ansible.builtin.import_role:
