--- a/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/playbooks/deploy_fabric.yml
+++ b/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/playbooks/deploy_fabric.yml
@@ -1,6 +1,7 @@
 ---
 - name: Deploy fabric to CVP
   hosts: cvp1
+  gather_facts: false
   tasks:
     - name: provision CVP with AVD configuration
       ansible.builtin.import_role:
