--- a/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/intended/structured_configs/leaf4.yml
+++ b/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/intended/structured_configs/leaf4.yml
@@ -1,4 +1,5 @@
 hostname: leaf4
+is_deployed: true
 router_bgp:
   as: '65299'
   router_id: 192.168.101.4
@@ -39,21 +40,26 @@ router_bgp:
   neighbors:
   - ip_address: 10.255.251.4
     peer_group: MLAG-IPv4-UNDERLAY-PEER
+    peer: leaf3
     description: leaf3
   - ip_address: 192.168.103.12
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65002'
+    peer: spine3
     description: spine3_Ethernet6
   - ip_address: 192.168.103.14
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65002'
+    peer: spine4
     description: spine4_Ethernet6
   - ip_address: 192.168.101.13
     peer_group: EVPN-OVERLAY-PEERS
+    peer: spine3
     description: spine3
     remote_as: '65002'
   - ip_address: 192.168.101.14
     peer_group: EVPN-OVERLAY-PEERS
+    peer: spine4
     description: spine4
     remote_as: '65002'
   redistribute_routes:
@@ -299,3 +305,5 @@ vxlan_interface:
       vrfs:
       - name: VRF_A
         vni: 10
+metadata:
+  platform: cEOS
