--- a/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/intended/structured_configs/superspine1.yml
+++ b/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/intended/structured_configs/superspine1.yml
@@ -1,4 +1,5 @@
 hostname: superspine1
+is_deployed: true
 router_bgp:
   as: '65000'
   router_id: 192.168.101.201
@@ -34,33 +35,41 @@ router_bgp:
   - ip_address: 192.168.103.41
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65001'
+    peer: spine1
     description: spine1_Ethernet7
   - ip_address: 192.168.103.45
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65001'
+    peer: spine2
     description: spine2_Ethernet7
   - ip_address: 192.168.103.49
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65002'
+    peer: spine3
     description: spine3_Ethernet7
   - ip_address: 192.168.103.53
     peer_group: IPv4-UNDERLAY-PEERS
     remote_as: '65002'
+    peer: spine4
     description: spine4_Ethernet7
   - ip_address: 192.168.101.11
     peer_group: EVPN-OVERLAY-PEERS
+    peer: spine1
     description: spine1
     remote_as: '65001'
   - ip_address: 192.168.101.12
     peer_group: EVPN-OVERLAY-PEERS
+    peer: spine2
     description: spine2
     remote_as: '65001'
   - ip_address: 192.168.101.13
     peer_group: EVPN-OVERLAY-PEERS
+    peer: spine3
     description: spine3
     remote_as: '65002'
   - ip_address: 192.168.101.14
     peer_group: EVPN-OVERLAY-PEERS
+    peer: spine4
     description: spine4
     remote_as: '65002'
   address_family_evpn:
@@ -154,3 +163,5 @@ router_bfd:
     interval: 1200
     min_rx: 1200
     multiplier: 3
+metadata:
+  platform: cEOS
