--- a/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/playbooks/test_fabric.yml
+++ b/ansible_collections/arista/avd/examples/single-dc-multipod-l3ls/playbooks/test_fabric.yml
@@ -1,10 +1,8 @@
 ---
-- name: "Run Fabric states validation"
+- name: Run fabric states validation
   hosts: FABRIC
   gather_facts: false
-  collections:
-    - arista.avd
   tasks:
-    - name: deploy configuration to device
+    - name: Validate devices
       ansible.builtin.import_role:
         name: arista.avd.eos_validate_state
