--- a/ansible_collections/arista/avd/requirements-dev.txt
+++ b/ansible_collections/arista/avd/requirements-dev.txt
@@ -12,7 +12,7 @@ molecule>=6.0
 molecule-plugins[docker]>=23.4.0
 yamllint
 treelib>=1.5.5
-md-toc>=7.1.0
+md-toc>=7.1.0,<9.0.0
 natsort
 jsonschema>=4.5.1,<4.18
 deepmerge>=1.1.0
