--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/internet_exit_policies.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/internet_exit_policies.schema.yml
@@ -33,10 +33,44 @@ keys:
           description: Add system default exit-group at the end of the policy.
         zscaler:
           type: dict
-          description: |-
-            Zscaler information. Only used if `type` is 'zscaler'.
+          description: Zscaler information. Only used if `type` is 'zscaler'.
           keys:
+            ipsec_key:
+              type: str
+              required: true
+              description: Key used for IPsec tunnels to Zscaler
             cloud_name:
               type: str
               description: Zscaler Cloud
               default: zscaler
+            # country: # TBD if we should have this under the site instead.
+            #   type: str
+            #   description: |-
+            #     Country set for traffic using this internet exit policy.
+            #     The country will be used by Zscaler policy enforcement.
+            # language: # TBD if we should have this under the site instead.
+            #   type: str
+            #   description: |-
+            #     Language set for traffic using this internet exit policy.
+            #     The language will be used by Zscaler policy enforcement.
+            download_bandwidth:
+              type: int
+              description: Maximum allowed download bandwidth in Mbps for each device using this policy.
+            upload_bandwidth:
+              type: int
+              description: Maximum allowed upload bandwidth in Mbps for each device using this policy.
+            firewall:
+              type: dict
+              keys:
+                enabled:
+                  type: bool
+                  description: Enforce firewall controls.
+                  default: false # TBD: Should this be true?
+                ips:
+                  type: bool
+                  description: Enable IPS Controls for the firewall.
+                  default: false
+            acceptable_use_policy:
+              type: bool
+              description: Display an Acceptable Use Policy (AUP) and require users to accept it.
+              default: false
