--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_segment_security.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_segment_security.schema.yml
@@ -85,6 +85,8 @@ keys:
                         type: list
                         description: The names of the source interface e.g. Port-Channel1 - note that platform support is limited.
                         min_length: 1
+                        items:
+                          type: str
                       match_lists:
                         type: list
                         description: The set of match-lists that define the segment. These can be a mix of IPv4 and IPv6 lists.
