--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -1386,11 +1386,11 @@ keys:
       range:
         beginning: 1006
         ending: 1199
-  internet_exit_policies:
+  cv_pathfinder_internet_exit_policies:
     description: 'PREVIEW: These keys are in preview mode.
 
 
-      List of path-groups used for the WAN configuration.'
+      List of internet-exit policies used for the WAN configuration.'
     type: list
     primary_key: name
     items:
@@ -1418,7 +1418,7 @@ keys:
             ipsec_key:
               type: str
               required: true
-              description: Key used for IPsec tunnels to Zscaler
+              description: Encryption key used for IPsec tunnels to Zscaler.
             download_bandwidth:
               type: int
               description: Maximum allowed download bandwidth in Mbps for each device
@@ -8404,7 +8404,7 @@ $defs:
           default: true
           description: For a WAN interface (`wan_carrier` is set), allow to disable
             the static tunnel towards Pathfinders.
-        internet_exit:
+        cv_pathfinder_internet_exit:
           description: 'PREVIEW: This key is in preview mode'
           type: dict
           keys:
@@ -8419,6 +8419,13 @@ $defs:
                   name:
                     type: str
                     description: Internet-exit policy name.
+                  tunnel_interface_numbers:
+                    type: str
+                    required: true
+                    description: 'Number range to use for Tunnel interfaces to an
+                      internet-exit service provider using this local interface.
+
+                      Examples: ''1-3'' or ''100,200,300'''
         raw_eos_cli:
           type: str
           description: EOS CLI rendered directly on the interface in the final EOS
