--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type_l3_interfaces.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type_l3_interfaces.schema.yml
@@ -124,7 +124,7 @@ $defs:
           default: true
           description: |-
             For a WAN interface (`wan_carrier` is set), allow to disable the static tunnel towards Pathfinders.
-        internet_exit:
+        cv_pathfinder_internet_exit:
           description: |-
             PREVIEW: This key is in preview mode
           type: dict
@@ -139,6 +139,12 @@ $defs:
                   name:
                     type: str
                     description: Internet-exit policy name.
+                  tunnel_interface_numbers:
+                    type: str
+                    required: true
+                    description: |-
+                      Number range to use for Tunnel interfaces to an internet-exit service provider using this local interface.
+                      Examples: '1-3' or '100,200,300'
         raw_eos_cli:
           type: str
           description: EOS CLI rendered directly on the interface in the final EOS configuration.
