--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -9029,8 +9029,11 @@ $defs:
 
 
                 If not set, each path-group in `names` will be attributed its `default_preference`.'
-      internet_exit_policy:
-        type: str
-        description: 'Internet-exit policy name associated with this virtual_topology.
+      internet_exit:
+        type: dict
+        keys:
+          policy:
+            type: str
+            description: 'Internet-exit policy name associated with this virtual_topology.
 
-          The policy must be defined under `internet_exit_policies`.'
+              The policy must be defined under `internet_exit_policies`.'
