--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge2A.cfg
@@ -75,9 +75,11 @@ router adaptive-virtual-topology
       path-selection load-balance LB-PROD-AVT-POLICY-DEFAULT
    !
    profile PROD-AVT-POLICY-VIDEO
+      internet-exit policy ZSCALER-INTERNET-EXIT-2
       path-selection load-balance LB-PROD-AVT-POLICY-VIDEO
    !
    profile PROD-AVT-POLICY-VOICE
+      internet-exit policy ZSCALER-INTERNET-EXIT-1
       path-selection load-balance LB-PROD-AVT-POLICY-VOICE
    !
    vrf ATTRACTED-VRF-FROM-UPLINK
