--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
@@ -97,6 +97,10 @@ wan_router:
               wan_circuit_id: AF830
               ip_address: 172.20.20.20/31
               connected_to_pathfinder: false
+              cv_pathfinder_internet_exit:
+                policies:
+                  - name: ZSCALER-INTERNET-EXIT-1
+                    tunnel_interface_numbers: 100-102
         - name: cv-pathfinder-edge1
           id: 2
           uplink_switch_interfaces: [Ethernet2]
@@ -117,6 +121,12 @@ wan_router:
               wan_circuit_id: 404
               dhcp_accept_default_route: true
               ip_address: dhcp
+              cv_pathfinder_internet_exit:
+                policies:
+                  - name: ZSCALER-INTERNET-EXIT-1
+                    tunnel_interface_numbers: 100-102
+                  - name: ZSCALER-INTERNET-EXIT-2
+                    tunnel_interface_numbers: 110-112
     # SITE_HA_ENABLED
     - group: Site423
       cv_pathfinder_region: AVD_Land_West
@@ -410,6 +420,8 @@ wan_virtual_topologies:
               preference: alternate
           constraints:
             jitter: 42
+          internet_exit:
+            policy: ZSCALER-INTERNET-EXIT-1
           id: 2
         - application_profile: VIDEO
           path_groups:
@@ -419,6 +431,8 @@ wan_virtual_topologies:
               preference: alternate
           constraints:
             loss_rate: 42.0
+          internet_exit:
+            policy: ZSCALER-INTERNET-EXIT-2
           id: 4
         # This will not be rendered on devices without MPLS
         - application_profile: MPLS-ONLY
@@ -530,3 +544,10 @@ application_classification:
         port_values:
           - 30000-30100
           - 31000-31100
+
+cv_pathfinder_internet_exit_policies:
+  - name: ZSCALER-EXIT-POLICY-1
+    type: zscaler
+  - name: ZSCALER-EXIT-POLICY-2
+    fallback_to_system_default: False
+    type: zscaler
