--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_virtual_topology.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_virtual_topology.schema.yml
@@ -61,8 +61,11 @@ $defs:
                 "alternate" is converted to priority 2.
 
                 If not set, each path-group in `names` will be attributed its `default_preference`.
-      internet_exit_policy:
-        type: str
-        description: |-
-          Internet-exit policy name associated with this virtual_topology.
-          The policy must be defined under `internet_exit_policies`.
+      internet_exit:
+        type: dict
+        keys:
+          policy:
+            type: str
+            description: |-
+              Internet-exit policy name associated with this virtual_topology.
+              The policy must be defined under `internet_exit_policies`.
