Fix: Address PR comment

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ip-security.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ip-security.cfg
@@ -18,6 +18,9 @@ ip security
    ike policy IKE-2
    !
    ike policy IKE-FQDN
+      local-id fqdn fqdn.com
+   !
+   ike policy IKE-UFQDN
       local-id fqdn my.awesome@fqdn.com
    !
    sa policy SA-1
