--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -4446,7 +4446,7 @@ keys:
                 precedence.'
             local_id_fqdn:
               type: str
-              description: 'Local FQDN IKE Identification.
+              description: 'Local FQDN or UFQDN IKE Identification.
 
                 If both `local_id` and `local_id_fqdn` are set, `local_id_fqdn` takes
                 precedence.'
